FIX: Add spacy model to requirements and simplify nlp_extract

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-
-
-
 # requirements.txt
 
 streamlit
@@ -11,11 +8,14 @@ langchain
 langchain-community
 huggingface-hub
 pydantic
-spacy
-sentence-transformers
-transformers
 faiss-cpu
 torch
 python-docx
 pypdf
 python-dotenv
+sentence-transformers
+transformers
+
+# Pin spacy and add its model to ensure compatibility
+spacy==3.7.5
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
